--- a/css/_control-panel.scss
+++ b/css/_control-panel.scss
@@ -50,14 +50,19 @@
             }
         }
     }
-    .logout-button{
-        background-color: #059ce7;
-        border: none;
-        font-size: 1rem;
-        color: #fff;
-        padding: .5rem 0;
+    #logout{
+        width: 100%;
+        background-color: red;
+        .logout-button{
+            background-color: #059ce7;
+            border: none;
+            font-size: 1rem;
+            color: #fff;
+            padding: .5rem 0;
+        }
     }
 }
+
 main{
     width: 100%;
     .container{
