--- a/css/_request.scss
+++ b/css/_request.scss
@@ -5,7 +5,7 @@
     grid-gap: 1rem;
     grid-template-columns: repeat(2, 2fr);
     grid-template-rows: repeat(4, 1fr);
-    input{
+    input, select{
         padding: 1rem;
         width: 100%;
         border: 2px solid #00A8FF;
