--- a/css/style.scss
+++ b/css/style.scss
@@ -86,6 +86,14 @@ body, html{
             font-weight: bold;
         }
     }
+    
+}
+.error-label{
+    width: 100%;
+    background-color: #F8D7DA;
+    color: #721C24;
+    padding: .5rem;
+    margin-top: 1rem;
 }
 .signup-label{
     display: block;
