--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,9 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  position: fixed;
+  height: 100%;
+  left: 0;
 }
 
 .side-panel .container {
@@ -122,7 +125,7 @@
 .side-panel #logout .logout-button {
   background-color: #2980B9;
   border: none;
-  font-size: 1rem;
+  font-size: .6rem;
   color: #fff;
   padding: .5rem 0;
   width: 100%;
@@ -131,6 +134,7 @@
 
 main {
   width: 100%;
+  margin-left: 300px;
 }
 
 main .container {
@@ -154,6 +158,8 @@ main .container .stats-grid .card {
   padding: 1rem;
   -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.15);
           box-shadow: 0 3px 7px rgba(0, 0, 0, 0.15);
+  -webkit-animation: updown .3s ease-in-out;
+          animation: updown .3s ease-in-out;
 }
 
 main .container .stats-grid .card h4 {
@@ -171,6 +177,32 @@ main .container .stats-grid .card p {
   font-weight: 300;
   padding-top: 4rem;
   text-align: center;
+}
+
+@-webkit-keyframes updown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+}
+
+@keyframes updown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
 }
 
 .requests-grid {
@@ -420,5 +452,99 @@ body, html {
 .signup-label span a {
   text-decoration: none;
   color: #00A8FF;
+}
+
+#reclamation-form {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#reclamation-form form {
+  width: 500px;
+  padding: 1rem;
+  background-color: #FAFAFA;
+  -webkit-box-shadow: 0 1px 6px 1px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 1px 6px 1px rgba(0, 0, 0, 0.3);
+}
+
+#reclamation-form form input {
+  font-size: 1.2rem;
+  padding: .3rem 1rem;
+  background-color: #eeeeee;
+  border: none;
+  display: block;
+}
+
+#reclamation-form form textarea {
+  width: 100%;
+  padding: 1rem;
+  font-size: 1rem;
+  resize: none;
+  margin-bottom: 1rem;
+}
+
+#reclamation-form form input[type="submit"] {
+  width: 100%;
+  background-color: #28A745;
+  color: #fff;
+  cursor: pointer;
+}
+
+#reclamation-form form select {
+  width: 100%;
+  padding: .3rem 1rem;
+  margin: 1rem 0;
+}
+
+.recs-grid {
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 1rem;
+  -ms-grid-columns: (minmax(250px, 3fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(250px, 3fr));
+}
+
+.recs-grid .reclamation {
+  padding: 1rem;
+  background-color: #FAFAFA;
+}
+
+.recs-grid .reclamation input {
+  display: block;
+  width: 100%;
+  padding: .3rem 1rem;
+  border: none;
+  margin: .5rem 0;
+}
+
+.recs-grid .reclamation .rec-accept {
+  width: 40%;
+  display: inline-block;
+  background-color: #28A745;
+  color: #fff;
+}
+
+.recs-grid .reclamation .rec-decline {
+  width: 40%;
+  display: inline-block;
+  background-color: #e55039;
+  color: #fff;
+}
+
+.recs-grid .reclamation textarea {
+  resize: none;
 }
 /*# sourceMappingURL=style.css.map */
